# minecraft-plus-plus

./: CMakeLists.txt  README.md  block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  chunk_mesher.cpp  chunk_mesher.h  config.h  entity.cpp  entity.h  gl.c  gl.h  input.cpp  input.h  lights.c  lights.cpp  lights.h  main.c  main.cpp  mesh.cpp  mesh.h  perlin.cpp  perlin.h  physics.c  physics.h  raycast.c  raycast.h  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h  utils.c  utils.h  window.c  window.cpp  window.h  (+3 more)
shaders/: chunk.frag  chunk.vert  sel-block.frag  sel-block.vert
